# A2DStudio

./: .env.example  .gitattributes  .gitignore  .prettierignore  CLAUDE.md  README.md  a2d_stage_screenshot.py  environment.yaml  main.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.json  update_api.py  update_config.json  update_core.py  update_main.py  version  vite.config.ts
src/: App.vue  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/plugins/tauri-plugin-screenshots/: .release-it.ts  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
src-tauri/plugins/tauri-plugin-screenshots/guest-js/: index.ts
src-tauri/plugins/tauri-plugin-screenshots/permissions/: default.toml
src-tauri/plugins/tauri-plugin-screenshots/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-screenshots/permissions/autogenerated/commands/: clear_screenshots.toml  get_monitor_screenshot.toml  get_screenshotable_monitors.toml  get_screenshotable_windows.toml  get_window_screenshot.toml  (+2 more)
src-tauri/plugins/tauri-plugin-screenshots/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-screenshots/src/: commands.rs  lib.rs  windows.rs
src-tauri/resources/game_data/characters/诺一钦灵/: settings.yml
src-tauri/resources/game_data/characters/风雪/: settings.yml
src-tauri/resources/game_data/schedules/: scheduleA.txt
src-tauri/resources/game_data/scripts/一只简简单单的剧情/: story_config.yaml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai_service/: config.rs  mod.rs  prompt.rs  screen_analyzer.rs  service.rs  translator.rs  types.rs
src-tauri/src/ai_service/emotion/: classifier.rs  mod.rs
src-tauri/src/ai_service/game_system/: game_status.rs  memory_builder.rs  mod.rs  persistent_memory_system.rs  role_manager.rs  scene_store.rs
src-tauri/src/ai_service/game_system/script_engine/: chapter.rs  responses.rs
src-tauri/src/ai_service/llm/: factory.rs  mod.rs  provider.rs
src-tauri/src/ai_service/llm/providers/: gemini.rs  mod.rs  openai.rs
src-tauri/src/ai_service/message_system/: events.rs  generator.rs  mod.rs  processor.rs  producer.rs  responses.rs
src-tauri/src/ai_service/proactive_system/: activity_monitor.rs  config.rs  interest_manager.rs  mod.rs  schedule_manager.rs  strategy_dispatcher.rs  types.rs  visual_monitor.rs
src-tauri/src/ai_service/tts/: mod.rs  provider.rs  voice_maker.rs
src-tauri/src/ai_service/tts/adapters/: aivis.rs  bv2.rs  gsv.rs  indextts.rs  mod.rs  sbv2.rs  sbv2api.rs  vits.rs
src-tauri/src/api/: adventure.rs  asset.rs  background.rs  character.rs  chat.rs  game.rs  media.rs  mod.rs  save.rs  scene.rs  schedule.rs  screenshot.rs  script.rs
src-tauri/src/config/: mod.rs  proactive.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/entities/: adventure_unlock.rs  line.rs  line_perception.rs  memory_bank.rs  mod.rs  role.rs  running_script.rs  save.rs
src-tauri/src/db/managers/: mod.rs  role_repo.rs
src-tauri/src/init/: mod.rs  role_sync.rs  static_copy.rs
src-tauri/src/migration/: m20240101_000001_create_tables.rs  mod.rs
src-tauri/src/utils/: prompt.rs
(+556 files in other folders)
